--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="es"></html>
-<head>
-  <meta charset="UTF-8"/>
-  <title>Documents</title>
-</head>
-<body>
-  <h1>Hello World</h1>
-</body>
+<html lang="es">
+  <head>
+    <meta charset="UTF-8"/>
+    <title>Documents</title>
+    <link rel="stylesheet" href="dist/css/app.css"/>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+  </body>
+</html>
