create page product

--- a/our-coffee.html
+++ b/our-coffee.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav class="c-navbar navbar navbar-expand-lg">
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="c-navbar__logo" href="#!"><img src="dist/img/logo.svg" alt=""/></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button><a class="c-navbar__logo simple" href="#!"><img src="dist/img/kerema-simple.svg" alt=""/></a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item"><a class="nav-link" href="#!"><i class="icon-facebook"></i></a></li>
@@ -40,23 +40,23 @@
           <div class="col-12">
             <h2>presentaciones</h2>
           </div>
-          <div class="col col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-1.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-1.png" alt=""/>
               <p>Café kere'ma Premium</p></a></div>
-          <div class="col col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-2.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-2.png" alt=""/>
               <p>Café kere'ma Especial</p></a></div>
-          <div class="col col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-3.png" alt=""/>
               <p>Café kere'ma Natural</p></a></div>
-          <div class="col col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-3.png" alt=""/>
               <p>Café kere'ma Honey</p></a></div>
         </div>
       </div>
     </section>
-    <section>
+    <section class="c-presentations">
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentation__main"><img src="dist/img/coffee-complete-1.png" alt=""/>
-              <div class="c-presentation__main__description"><img src="dist/img/coffee-complete-1-title" alt=""/>
+            <div class="c-presentations__main"><img src="dist/img/coffee-complete-1.png" alt=""/>
+              <div class="c-presentation__main__description"><img src="dist/img/coffee-complete-1-title.png" alt=""/>
                 <p>Nuestro clásico, Perfil de tueste; de sabores a caramelo, pasta de cacao, chocolate y flores, cuerpo medio, acidez balanceada con notas cítricas.</p>
                 <ul>
                   <li>Origen: Finca La Torre - Villa Rica</li>
@@ -64,11 +64,11 @@
                   <li>Altitud: 1400 a 1800 m.s.n.m.</li>
                   <li>Variedad: Caturra, Geisha, Catimor y Catuai.</li>
                 </ul>
-              </div>
-              <div class="c-presentation__main__price">
-                <h4>Presentaciones</h4>
-                <div class="c-presentation__main__price-item"><span>250gr.</span><span>s/.20</span></div>
-                <div class="c-presentation__main__price-item"><span>1kg.</span><span>s/.50</span></div>
+                <div class="c-presentations__main__price">
+                  <h4>Presentaciones</h4>
+                  <div class="c-presentations__main__price-item"><span>250gr.</span><span>s/.20</span></div>
+                  <div class="c-presentations__main__price-item"><span>1kg.</span><span>s/.50</span></div>
+                </div>
               </div>
             </div>
           </div>
