agree page coffee

--- a/our-coffee.html
+++ b/our-coffee.html
@@ -56,23 +56,23 @@
         <div class="row">
           <div class="col-12">
             <div class="c-presentations__main"><img src="dist/img/coffee-complete-1.png" alt=""/>
-              <div class="c-presentation__main__description"><img src="dist/img/coffee-complete-1-title.png" alt=""/>
+              <div class="c-presentations__main__description"><img src="dist/img/coffee-complete-1-title.png" alt=""/>
                 <p>Nuestro clásico, Perfil de tueste; de sabores a caramelo, pasta de cacao, chocolate y flores, cuerpo medio, acidez balanceada con notas cítricas.</p>
                 <ul>
-                  <li>Origen: Finca La Torre - Villa Rica</li>
-                  <li>Proceso: Lavado</li>
-                  <li>Altitud: 1400 a 1800 m.s.n.m.</li>
-                  <li>Variedad: Caturra, Geisha, Catimor y Catuai.</li>
+                  <li><b>Origen:</b> Finca La Torre - Villa Rica</li>
+                  <li><b>Proceso:</b> Lavado</li>
+                  <li><b>Altitud:</b> 1400 a 1800 m.s.n.m.</li>
+                  <li><b>Variedad:</b> Caturra, Geisha, Catimor y Catuai.</li>
                 </ul>
                 <div class="c-presentations__main__price">
-                  <h4>Presentaciones</h4>
+                  <h4>Presentaciones:</h4>
                   <div class="c-presentations__main__price-item"><span>250gr.</span><span>s/.20</span></div>
                   <div class="c-presentations__main__price-item"><span>1kg.</span><span>s/.50</span></div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-12"><a class="c-presentation__button" href="#!">regresar</a></div>
+          <div class="col-12"><a class="c-presentations__button" href="#!">regresar</a></div>
         </div>
       </div>
     </section>
