create new pages coof pages

--- a/our-coffee.html
+++ b/our-coffee.html
@@ -76,6 +76,16 @@
         </div>
       </div>
     </section>
+    <section class="c-section-clients">
+      <h2>miembro embajador de:</h2>
+      <div class="container">
+        <div class="c-section-clients__image"><img src="dist/img/clients/client-1.png" alt=""/></div>
+        <div class="c-section-clients__image"><img src="dist/img/clients/client-2.png" alt=""/></div>
+        <div class="c-section-clients__image"><img src="dist/img/clients/client-3.png" alt=""/></div>
+        <div class="c-section-clients__image"><img src="dist/img/clients/client-4.png" alt=""/></div>
+        <div class="c-section-clients__image"><img src="dist/img/clients/client-5.png" alt=""/></div>
+      </div>
+    </section>
     <footer class="c-footer">
       <div class="container">
         <div class="row">
