--- a/our-coffee-2.html
+++ b/our-coffee-2.html
@@ -40,13 +40,13 @@
           <div class="col-12">
             <h2>presentaciones</h2>
           </div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-1.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee.html"><img src="dist/img/coffee-1.png" alt=""/>
               <p>Café kere'ma Premium</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-2.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-1.html"><img src="dist/img/coffee-2.png" alt=""/>
               <p>Café kere'ma Especial</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-2.html"><img src="dist/img/coffee-3.png" alt=""/>
               <p>Café kere'ma Natural</p></a></div>
-          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="#!"><img src="dist/img/coffee-3.png" alt=""/>
+          <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-coffee-3.html"><img src="dist/img/coffee-3.png" alt=""/>
               <p>Café kere'ma Honey</p></a></div>
         </div>
       </div>
