--- a/contact.html
+++ b/contact.html
@@ -34,13 +34,48 @@
         <h1>nuestro<br>trabajo</h1>
       </div>
     </main>
-    <section class="c-presentations">
+    <section class="c-presentations c-contact-back"><img src="dist/img/contact-back.png" alt=""/>
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img src="dist/img/work-complete-1.png" alt=""/>
-              <div class="c-presentations__main__description"><img src="dist/img/work-complete-1-title.png" alt=""/>
-                <p>Te invitamos a recorrer nuestra finca, aprender sobre el proceso productivo del café, que inicia en la semilla, viveros, plantaciones; hasta el resultado final, una buena taza de café recién pasado.</p>
+            <div class="c-contact">
+              <div class="c-contact__description"><img src="dist/img/title-contact.png" alt=""/>
+                <h3>Informacion<br>de contacto</h3>
+                <p>983 467 917</p>
+                <p>974 891 025</p>
+                <p>info@keremaperu.com</p>
+                <h3>dirección</h3>
+                <p>Carretera el Oconal - Villa Rica (0.2 km)</p>
+                <h3>Horario</h3>
+                <p>09:00 A 19:00</p>
+              </div>
+              <div class="c-contact__form">
+                <form action="#!">
+                  <div class="c-contact__form-group"><img src="dist/img/contact-form-title.png" alt=""/></div>
+                  <div class="c-contact__form-group">
+                    <label><span>Tu nombre</span>
+                      <input type="text"/>
+                    </label>
+                  </div>
+                  <div class="c-contact__form-group">
+                    <label><span>E-mail</span>
+                      <input type="email"/>
+                    </label>
+                  </div>
+                  <div class="c-contact__form-group">
+                    <label><span>Asunto</span>
+                      <input type="text"/>
+                    </label>
+                  </div>
+                  <div class="c-contact__form-group">
+                    <label><span>Mensaje</span>
+                      <textarea cols="30" rows="10"></textarea>
+                    </label>
+                  </div>
+                  <div class="c-contact__form-group">
+                    <button>enviar ></button>
+                  </div>
+                </form>
               </div>
             </div><a class="c-presentations__button" href="#!">regresar</a>
           </div>
