--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
     </nav>
     <main class="c-banner-products"><img src="dist/img/banner-work.png" alt=""/>
       <div class="c-banner-products__title">
-        <h1>nuestro<br>trabajo</h1>
+        <h1 class="wow fadeInDown">nuestro<br>trabajo</h1>
       </div>
     </main>
     <section class="c-presentations c-contact-back"><img src="dist/img/contact-back.png" alt=""/>
@@ -35,7 +35,7 @@
         <div class="row">
           <div class="col-12">
             <div class="c-contact">
-              <div class="c-contact__description"><img src="dist/img/title-contact.png" alt=""/>
+              <div class="c-contact__description wow fadeInLeft"><img src="dist/img/title-contact.png" alt=""/>
                 <h3>Informacion<br>de contacto</h3>
                 <p>983 467 917</p>
                 <p>974 891 025</p>
@@ -45,7 +45,7 @@
                 <h3>Horario</h3>
                 <p>09:00 A 19:00</p>
               </div>
-              <div class="c-contact__form">
+              <div class="c-contact__form wow fadeInRight">
                 <form action="#!">
                   <div class="c-contact__form-group"><img src="dist/img/contact-form-title.png" alt=""/></div>
                   <div class="c-contact__form-group">
@@ -78,7 +78,7 @@
         </div>
       </div>
     </section>
-    <section class="c-section-clients">
+    <section class="c-section-clients wow fadeInDown">
       <h2>miembro embajador de:</h2>
       <div class="container">
         <div class="c-section-clients__image"><img src="dist/img/clients/client-1.png" alt=""/></div>
@@ -93,7 +93,7 @@
         <div class="row">
           <div class="col-12 col-lg-6">
             <div class="c-footer__newsletter"><img src="dist/img/logo.svg" alt=""/>
-              <div class="c-footer__newsletter__form">
+              <div class="c-footer__newsletter__form wow fadeInDown">
                 <p>Únete a la lista para recibir promociones especiales y novedades</p>
                 <form action="#!">
                   <button>Suscríbete</button>
@@ -101,13 +101,13 @@
                 </form>
               </div>
             </div>
-            <ul class="c-footer__contact">
+            <ul class="c-footer__contact wow fadeInLeft">
               <li>D. Carretera el Oconal - Villa Rica(0.2 km) - Perú</li>
               <li>T. 983467917 - 974891025</li>
               <li>E. info@keremaperu.com</li>
             </ul>
           </div>
-          <div class="col-12 col-lg-6"> 
+          <div class="col-12 col-lg-6 wow fadeInRight">
             <h4>Obten las últimas noticias</h4>
             <div class="c-footer__socials"><a href="#!"><i class="icon-instagram"></i></a><a href="#!"><i class="icon-facebook"></i></a><a href="#!"><i class="icon-youtube"></i></a><a href="#!"><i class="icon-whatsapp"></i></a></div>
             <p>2019 hecho con ♥ por <a href="#!">Altiplánika Marketing</a></p>
@@ -119,6 +119,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="dist/js/slick.js"></script>
+    <script src="dist/js/wow.js"></script>
     <script src="dist/js/main.js"></script>
   </body>
 </html>
