--- a/gallery.html
+++ b/gallery.html
@@ -27,7 +27,7 @@
     </nav>
     <main class="c-banner-products"><img src="dist/img/banner-gallery.png" alt=""/>
       <div class="c-banner-products__title">
-        <h1>galería<br>de  fotos</h1>
+        <h1 class="wow fadeInDown">galería<br>de  fotos</h1>
       </div>
     </main>
     <section class="c-presentations">
@@ -36,7 +36,7 @@
           <div class="col-12">
             <div class="c-gallery">
               <p>> GALERIA DE FOTOS / ÁREAS DE PRODUCCIÓN DE CAFÉ</p>
-              <div class="c-gallery__photos">
+              <div class="c-gallery__photos wow fadeInDown">
                 <div class="item"><img src="dist/img/gallery-1.png" alt=""/></div>
                 <div class="item"><img src="dist/img/gallery-2.png" alt=""/></div>
                 <div class="item"><img src="dist/img/gallery-3.png" alt=""/></div>
@@ -44,12 +44,12 @@
                 <div class="item"><img src="dist/img/gallery-5.png" alt=""/></div>
                 <div class="item"><img src="dist/img/gallery-6.png" alt=""/></div>
               </div>
-            </div><a class="c-presentations__button" href="#!">regresar</a>
+            </div><a class="c-presentations__button" href="index.html">regresar</a>
           </div>
         </div>
       </div>
     </section>
-    <section class="c-section-clients">
+    <section class="c-section-clients wow fadeInDown">
       <h2>miembro embajador de:</h2>
       <div class="container">
         <div class="c-section-clients__image"><img src="dist/img/clients/client-1.png" alt=""/></div>
@@ -64,7 +64,7 @@
         <div class="row">
           <div class="col-12 col-lg-6">
             <div class="c-footer__newsletter"><img src="dist/img/logo.svg" alt=""/>
-              <div class="c-footer__newsletter__form">
+              <div class="c-footer__newsletter__form wow fadeInDown">
                 <p>Únete a la lista para recibir promociones especiales y novedades</p>
                 <form action="#!">
                   <button>Suscríbete</button>
@@ -72,13 +72,13 @@
                 </form>
               </div>
             </div>
-            <ul class="c-footer__contact">
+            <ul class="c-footer__contact wow fadeInLeft">
               <li>D. Carretera el Oconal - Villa Rica(0.2 km) - Perú</li>
               <li>T. 983467917 - 974891025</li>
               <li>E. info@keremaperu.com</li>
             </ul>
           </div>
-          <div class="col-12 col-lg-6"> 
+          <div class="col-12 col-lg-6 wow fadeInRight">
             <h4>Obten las últimas noticias</h4>
             <div class="c-footer__socials"><a href="#!"><i class="icon-instagram"></i></a><a href="#!"><i class="icon-facebook"></i></a><a href="#!"><i class="icon-youtube"></i></a><a href="#!"><i class="icon-whatsapp"></i></a></div>
             <p>2019 hecho con ♥ por <a href="#!">Altiplánika Marketing</a></p>
@@ -90,6 +90,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="dist/js/slick.js"></script>
+    <script src="dist/js/wow.js"></script>
     <script src="dist/js/main.js"></script>
   </body>
 </html>
