--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         </div>
       </div>
     </nav>
-    <main class="c-main">
+    <main class="c-main wow fadeInDown">
       <div class="slider single-item">
         <div>
           <div class="c-main__slide"><img src="dist/img/banner_principal.png" alt=""/>
             <div class="container">
-              <div class="row">
+              <div class="row wow fadeInDown">
                 <div class="col-12 col-md-6 offset-md-6">
                   <h3>“EL CAFÉ QUE<br><b>UNE</b> A LAS<br>PERSONAS”</h3>
                 </div>
@@ -39,7 +39,7 @@
           </div>
         </div>
         <div>
-          <div class="c-main__slide"><img src="dist/img/banner_principal-1.png" alt=""/></div>
+          <div class="c-main__slide"><img src="dist/img/banner_principa-1.png" alt=""/></div>
         </div>
         <div>
           <div class="c-main__slide"><img src="dist/img/banner_principal-2.png" alt=""/></div>
@@ -50,29 +50,29 @@
       <div class="container">
         <div class="c-slider-principal slider">
           <div>
-            <div class="c-section-products__slide"><img src="dist/img/coffee_work.png" alt=""/>
-              <div class="c-section-products__slide__description"><span>PRODUCTOS</span>
+            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_work.png" alt=""/>
+              <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
                 <h4>Nuestros<br>trabajo</h4><a href="#!">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img src="dist/img/coffee_methods.png" alt=""/>
-              <div class="c-section-products__slide__description"><span>PRODUCTOS</span>
+            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_methods.png" alt=""/>
+              <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
                 <h4>Nuestros<br>métodos</h4><a href="#!">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img src="dist/img/coffee_chocolate.png" alt=""/>
-              <div class="c-section-products__slide__description"><span>PRODUCTOS</span>
+            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_chocolate.png" alt=""/>
+              <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
                 <h4>Nuestros<br>chocolates</h4><a href="#!">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img src="dist/img/coffee_coffee.png" alt=""/>
-              <div class="c-section-products__slide__description"><span>PRODUCTOS</span>
+            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_coffe.png" alt=""/>
+              <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
                 <h4>Nuestros<br>cafés</h4><a href="#!">Ver más</a>
               </div>
             </div>
@@ -81,12 +81,12 @@
       </div>
     </section>
     <section class="c-section-about"><img src="dist/img/nacimos-back.png" alt=""/>
-      <div class="c-section-title"><img src="dist/img/title-nacimos.svg" alt=""/>
+      <div class="c-section-title wow fadeInDown"><img src="dist/img/title-nacimos.svg" alt=""/>
         <p>...En una finca llena de hermosa vegetación y una cálida familia, que nos enseñó a trabajar la tierra y definió nuestra pasión en el café, un sentimiento que queremos transmitir a través de todas nuestras actividades.</p>
       </div>
     </section>
     <section class="c-section-about c-section-about--black">
-      <div class="c-section-title"><img src="dist/img/title-nosotros.svg" alt=""/>
+      <div class="c-section-title wow fadeInDown"><img src="dist/img/title-nosotros.svg" alt=""/>
         <p class="c-section-about__description">KERE'Ma, es un término de profundo significado. Rescata la pasión, entrega y sobre todo el amor de una gran familia, para producir la tierra en armonía con la naturaleza. Desde 1930, heredamos esta tradición de "Don Francisco La Torre Westreicher" seguido por nuestro padre y referente "Don Pancho". KERE'ndo que más productores cultiven cafés de alta calidad y que más peruanos KERan 'Más consumir de estos finos cafés. Hoy en día, como parte de la tercera y cuarta generación, continuamos con ésta apasionada y bella tradición; de amar la tierra, respetar la naturaleza y KEREr 'Más café. Para que también usted, su familia y amigos... KEREM'a Café de FINCA LA TORRE; "EL PARQUE DEL CAFÉ".         </p>
       </div>
     </section>
@@ -94,16 +94,23 @@
       <div class="container">
         <div class="c-slider-gallery slider">
           <div>
-            <div class="c-section-products__slide"><img src="dist/img/logo_coffee.png" alt=""/>
-              <div class="c-section-products__slide__description"><span>GALERIA</span>
+            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_coffee.png" alt=""/>
+              <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
                 <h4>Consumi<br>dores</h4><a href="#!">Ver más</a>
               </div>
             </div>
           </div>
           <div>
-            <div class="c-section-products__slide"><img src="dist/img/coffee_work.png" alt=""/>
-              <div class="c-section-products__slide__description"><span>PRODUCTOS</span>
-                <h4>Nuestros<br>trabajo</h4><a href="#!">Ver más</a>
+            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_progress.png" alt=""/>
+              <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
+                <h4>proceso de<br>calidad</h4><a href="#!">Ver más</a>
+              </div>
+            </div>
+          </div>
+          <div>
+            <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_plants.png" alt=""/>
+              <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
+                <h4>áreas de<br>producción<br>de café</h4><a href="#!">Ver más</a>
               </div>
             </div>
           </div>
@@ -120,14 +127,14 @@
             <h2>opiniones</h2>
             <div class="c-slider-testimonial slider">
               <div>
-                <div class="c-section-testimonials__slide"><img src="dist/img/testimonial.png" alt=""/><span>Gerita Vásquez</span>
+                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial.png" alt=""/><span>Gerita Vásquez</span>
                   <div class="c-section-testimonials__description">
                     <p>“Me encantó conocer desde el sembrado de sus cafés, así como también el hecho que sea ecoamigable es muy importante, su sabor es realmente indescriptible. buenísimo!!”</p><img src="dist/img/testimonial_icon.png" alt=""/>
                   </div>
                 </div>
               </div>
               <div>
-                <div class="c-section-testimonials__slide"><img src="dist/img/testimonial.png" alt=""/><span>Gerita Vásquez</span>
+                <div class="c-section-testimonials__slide wow fadeInDown"><img src="dist/img/testimonial.png" alt=""/><span>Gerita Vásquez</span>
                   <div class="c-section-testimonials__description">
                     <p>“Me encantó conocer desde el sembrado de sus cafés, así como también el hecho que sea ecoamigable es muy importante, su sabor es realmente indescriptible. buenísimo!!”</p><img src="dist/img/testimonial_icon.png" alt=""/>
                   </div>
@@ -138,7 +145,7 @@
         </div>
       </div>
     </section>
-    <section class="c-section-clients">
+    <section class="c-section-clients wow fadeInDown">
       <h2>miembro embajador de:</h2>
       <div class="container">
         <div class="c-section-clients__image"><img src="dist/img/clients/client-1.png" alt=""/></div>
@@ -153,7 +160,7 @@
         <div class="row">
           <div class="col-12 col-lg-6">
             <div class="c-footer__newsletter"><img src="dist/img/logo.svg" alt=""/>
-              <div class="c-footer__newsletter__form">
+              <div class="c-footer__newsletter__form wow fadeInDown">
                 <p>Únete a la lista para recibir promociones especiales y novedades</p>
                 <form action="#!">
                   <button>Suscríbete</button>
@@ -161,13 +168,13 @@
                 </form>
               </div>
             </div>
-            <ul class="c-footer__contact">
+            <ul class="c-footer__contact wow fadeInLeft">
               <li>D. Carretera el Oconal - Villa Rica(0.2 km) - Perú</li>
               <li>T. 983467917 - 974891025</li>
               <li>E. info@keremaperu.com</li>
             </ul>
           </div>
-          <div class="col-12 col-lg-6"> 
+          <div class="col-12 col-lg-6 wow fadeInRight">
             <h4>Obten las últimas noticias</h4>
             <div class="c-footer__socials"><a href="#!"><i class="icon-instagram"></i></a><a href="#!"><i class="icon-facebook"></i></a><a href="#!"><i class="icon-youtube"></i></a><a href="#!"><i class="icon-whatsapp"></i></a></div>
             <p>2019 hecho con ♥ por <a href="#!">Altiplánika Marketing</a></p>
@@ -179,6 +186,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="dist/js/slick.js"></script>
+    <script src="dist/js/wow.js"></script>
     <script src="dist/js/main.js"></script>
   </body>
 </html>
