--- a/our-coffee-1.html
+++ b/our-coffee-1.html
@@ -26,13 +26,13 @@
       </div>
     </nav>
     <main class="c-banner-products"><img src="dist/img/banner-coffee.png" alt=""/>
-      <div class="c-banner-products__title">
+      <div class="c-banner-products__title wow fadeInDown">
         <h1>nuestros<br>cafés</h1>
       </div>
     </main>
     <section class="c-presentations">
       <div class="container">
-        <div class="row">
+        <div class="row wow fadeInDown">
           <div class="col-12">
             <h2>presentaciones</h2>
           </div>
@@ -51,8 +51,8 @@
       <div class="container">
         <div class="row">
           <div class="col-12">
-            <div class="c-presentations__main"><img src="dist/img/coffee-complete-2.png" alt=""/>
-              <div class="c-presentations__main__description"><img src="dist/img/coffee-complete-2-title.png" alt=""/>
+            <div class="c-presentations__main"><img class="wow fadeInLeft" src="dist/img/coffee-complete-2.png" alt=""/>
+              <div class="c-presentations__main__description wow fadeInRight"><img src="dist/img/coffee-complete-2-title.png" alt=""/>
                 <p>De proceso lavado. Perfil de tueste; de sabores a frutos rojos, notas a durazno y mandarina, cuerpo cremoso, acidez brillante, con notas dulces y cítricas.</p>
                 <ul>
                   <li><b>Origen:</b>  Finca La Torre - Villa Rica</li>
@@ -68,11 +68,11 @@
               </div>
             </div>
           </div>
-          <div class="col-12"><a class="c-presentations__button" href="#!">regresar</a></div>
+          <div class="col-12"><a class="c-presentations__button" href="index.html">regresar</a></div>
         </div>
       </div>
     </section>
-    <section class="c-section-clients">
+    <section class="c-section-clients wow fadeInDown">
       <h2>miembro embajador de:</h2>
       <div class="container">
         <div class="c-section-clients__image"><img src="dist/img/clients/client-1.png" alt=""/></div>
@@ -87,7 +87,7 @@
         <div class="row">
           <div class="col-12 col-lg-6">
             <div class="c-footer__newsletter"><img src="dist/img/logo.svg" alt=""/>
-              <div class="c-footer__newsletter__form">
+              <div class="c-footer__newsletter__form wow fadeInDown">
                 <p>Únete a la lista para recibir promociones especiales y novedades</p>
                 <form action="#!">
                   <button>Suscríbete</button>
@@ -95,13 +95,13 @@
                 </form>
               </div>
             </div>
-            <ul class="c-footer__contact">
+            <ul class="c-footer__contact wow fadeInLeft">
               <li>D. Carretera el Oconal - Villa Rica(0.2 km) - Perú</li>
               <li>T. 983467917 - 974891025</li>
               <li>E. info@keremaperu.com</li>
             </ul>
           </div>
-          <div class="col-12 col-lg-6"> 
+          <div class="col-12 col-lg-6 wow fadeInRight">
             <h4>Obten las últimas noticias</h4>
             <div class="c-footer__socials"><a href="#!"><i class="icon-instagram"></i></a><a href="#!"><i class="icon-facebook"></i></a><a href="#!"><i class="icon-youtube"></i></a><a href="#!"><i class="icon-whatsapp"></i></a></div>
             <p>2019 hecho con ♥ por <a href="#!">Altiplánika Marketing</a></p>
@@ -113,6 +113,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="dist/js/slick.js"></script>
+    <script src="dist/js/wow.js"></script>
     <script src="dist/js/main.js"></script>
   </body>
 </html>
