--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
           <div>
             <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_work.png" alt=""/>
               <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
-                <h4>Nuestros<br>trabajo</h4><a href="#!">Ver más</a>
+                <h4>Nuestros<br>trabajo</h4><a href="our-work.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
             <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_methods.png" alt=""/>
               <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
-                <h4>Nuestros<br>métodos</h4><a href="#!">Ver más</a>
+                <h4>Nuestros<br>métodos</h4><a href="our-method.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
             <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_chocolate.png" alt=""/>
               <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
-                <h4>Nuestros<br>chocolates</h4><a href="#!">Ver más</a>
+                <h4>Nuestros<br>chocolates</h4><a href="our-chocolate.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
             <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/coffee_coffe.png" alt=""/>
               <div class="c-section-products__slide__description wow fadeInRight"><span>PRODUCTOS</span>
-                <h4>Nuestros<br>cafés</h4><a href="#!">Ver más</a>
+                <h4>Nuestros<br>cafés</h4><a href="our-coffee.html">Ver más</a>
               </div>
             </div>
           </div>
@@ -96,21 +96,21 @@
           <div>
             <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_coffee.png" alt=""/>
               <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
-                <h4>Consumi<br>dores</h4><a href="#!">Ver más</a>
+                <h4>Consumi<br>dores</h4><a href="gallery-2.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
             <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_progress.png" alt=""/>
               <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
-                <h4>proceso de<br>calidad</h4><a href="#!">Ver más</a>
+                <h4>proceso de<br>calidad</h4><a href="gallery-1.html">Ver más</a>
               </div>
             </div>
           </div>
           <div>
             <div class="c-section-products__slide"><img class="wow fadeInLeft" src="dist/img/logo_plants.png" alt=""/>
               <div class="c-section-products__slide__description wow fadeInRight"><span>GALERIA</span>
-                <h4>áreas de<br>producción<br>de café</h4><a href="#!">Ver más</a>
+                <h4>áreas de<br>producción<br>de café</h4><a href="gallery.html">Ver más</a>
               </div>
             </div>
           </div>
