agree  new images in 6x format

--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
           <div class="col-12 col-lg-6 wow fadeInRight">
             <h4>Obten las últimas noticias</h4>
             <div class="c-footer__socials"><a href="#!"><i class="icon-instagram"></i></a><a href="#!"><i class="icon-facebook"></i></a><a href="#!"><i class="icon-youtube"></i></a><a href="#!"><i class="icon-whatsapp"></i></a></div>
-            <p>2019 hecho con ♥ por <a href="#!">Altiplánika Marketing</a></p>
+            <p>2019 hecho con ♥ por <a class="red" href="#!">Altiplánika Marketing</a></p>
           </div>
         </div>
       </div>
