--- a/our-chocolate-1.html
+++ b/our-chocolate-1.html
@@ -37,9 +37,9 @@
             <h2>presentaciones</h2>
           </div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-chocolate.html"><img src="dist/img/chocolate-1.png" alt=""/>
-              <p>Pasta de Cacao Kere'ma</p></a></div>
+              <p>Pasta de Cacao KERE'Ma </p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-chocolate-1.html"><img src="dist/img/chocolate-2.png" alt=""/>
-              <p>Nibs de Cacao Kere'ma</p></a></div>
+              <p>Nibs de Cacao KERE'Ma </p></a></div>
         </div>
       </div>
     </section>
@@ -100,7 +100,7 @@
           <div class="col-12 col-lg-6 wow fadeInRight">
             <h4>Obten las últimas noticias</h4>
             <div class="c-footer__socials"><a href="#!"><i class="icon-instagram"></i></a><a href="#!"><i class="icon-facebook"></i></a><a href="#!"><i class="icon-youtube"></i></a><a href="#!"><i class="icon-whatsapp"></i></a></div>
-            <p>2019 hecho con ♥ por <a href="#!">Altiplánika Marketing</a></p>
+            <p>2019 hecho con ♥ por <a class="red" href="#!">Altiplánika Marketing</a></p>
           </div>
         </div>
       </div>
