--- a/our-method-1.html
+++ b/our-method-1.html
@@ -37,13 +37,13 @@
             <h2>presentaciones</h2>
           </div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method.html"><img src="dist/img/metodo-1.png" alt=""/>
-              <p>Café kere'ma Premium</p></a></div>
+              <p>Café KERE'Ma Premium</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-1.html"><img src="dist/img/metodo-2.png" alt=""/>
-              <p>Café kere'ma Especial</p></a></div>
+              <p>Café KERE'Ma Especial</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-2.html"><img src="dist/img/metodo-3.png" alt=""/>
-              <p>Café kere'ma Natural</p></a></div>
+              <p>Café KERE'Ma Natural</p></a></div>
           <div class="col-6 col-sm-6 col-md-3"><a class="c-presentations__item" href="our-method-3.html"><img src="dist/img/metodo-3.png" alt=""/>
-              <p>Café kere'ma Honey</p></a></div>
+              <p>Café KERE'Ma Honey</p></a></div>
         </div>
       </div>
     </section>
@@ -97,7 +97,7 @@
           <div class="col-12 col-lg-6 wow fadeInRight">
             <h4>Obten las últimas noticias</h4>
             <div class="c-footer__socials"><a href="#!"><i class="icon-instagram"></i></a><a href="#!"><i class="icon-facebook"></i></a><a href="#!"><i class="icon-youtube"></i></a><a href="#!"><i class="icon-whatsapp"></i></a></div>
-            <p>2019 hecho con ♥ por <a href="#!">Altiplánika Marketing</a></p>
+            <p>2019 hecho con ♥ por <a class="red" href="#!">Altiplánika Marketing</a></p>
           </div>
         </div>
       </div>
